--- a/post.html
+++ b/post.html
@@ -59,12 +59,12 @@ body{
         <div class="videos">
             <div class="video1">
                 <video width="640" height="360" controls>
-                    <source src="pollinator.mp4" type="video/mp4">
+                    <source src="videos/video1.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="video2">
                 <video width="640" height="360" controls>
-                    <source src="pollinator_clip02.mp4" type="video/mp4">
+                    <source src="videos/video2.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
